--- a/res/scss/view/_bulk-restore-all.scss
+++ b/res/scss/view/_bulk-restore-all.scss
@@ -6,21 +6,45 @@
       font-weight: 700;
     }
   }
-  .random_answer
-  {
-    font-size:16px;
-    font-weight: 700;
-    padding: 8px;
-    border: 1px solid #ccc;
-    display: inline-block;
 
+  section.select_folders
+  {
+  //  border-bottom: 1px solid #ccc;
+  margin: 20px 0;
+    .input
+    {
+      margin: 10px 0 10px 15px;
+      font-size: 16px;
+      display: block;
+      clear: both;
+    }
+
+    .filecount
+    {
+      font-size: 12px;
+    }
   }
 
-  .inputs
+  section.random_check
   {
-    margin: 15px 0;
-    span { margin-right: 8px; }
+    .random_answer
+    {
+      font-size:16px;
+      font-weight: 700;
+      padding: 8px;
+      border: 1px solid #ccc;
+      display: inline-block;
+
+    }
+
+      .inputs
+      {
+        margin: 15px 0;
+        span { margin-right: 8px; }
+      }
   }
+
+
 
   .button
   {
