[Settings] If in custom media, no new directory is selected hide or disable 'add folder' + Filetree bug fix when no directory, or file is selected.

--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -22,3 +22,14 @@
 .short-pixel-bulk-page.bulk-restore-all .button {
   margin: 10px 0;
   margin-right: 8px; }
+
+/* Specific styles for advanced settings tab */
+#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder {
+  margin: 10px 0; }
+  #shortpixel-settings-tabs #tab-adv-settings .addCustomFolder .add-folder-text {
+    margin-left: 5px; }
+  #shortpixel-settings-tabs #tab-adv-settings .addCustomFolder input[type="text"] {
+    width: 50em;
+    max-width: 70%; }
+  #shortpixel-settings-tabs #tab-adv-settings .addCustomFolder input[name="saveAdv"] {
+    margin-left: 8px; }
