--- a/res/css/short-pixel.css
+++ b/res/css/short-pixel.css
@@ -79,6 +79,7 @@ div.fb-like  {
 .wp-core-ui .button.remove-folder-button {
     min-width: 120px;
 }
+/** In time this is not needed, new notice model **/
 .sp-notice {
     background: #fff;
     border-left: 4px solid #fff;
@@ -605,7 +606,7 @@ article.sp-tabs section .wp-shortpixel-tab-content {
 visibility: hidden;
 }
 article.sp-tabs section.sel-tab .wp-shortpixel-tab-content {
-visibility: visible;
+visibility: visible !important;
 }
 article.sp-tabs section:first-child {
     z-index: 1;
