--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -1,3 +1,13 @@
+.shortpixel.notice {
+  min-height: 50px;
+  padding: 8px; }
+  .shortpixel.notice img {
+    display: inline-block;
+    margin: 0 25px 0 0;
+    max-height: 50px; }
+  .shortpixel.notice .notice-dismiss {
+    margin-top: 10px; }
+
 .short-pixel-bulk-page.bulk-restore-all ol li {
   font-weight: 700; }
 .short-pixel-bulk-page.bulk-restore-all section.select_folders {
