--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -1,5 +1,6 @@
 
-@import 'utils/notices'; 
+@import 'utils/notices';
 @import 'view/bulk-restore-all';
+@import 'view/bulk_dashboard'; 
 @import 'view/settings-advanced';
 @import 'view/settings';
