Add style to fix display of the hamburger menu in WP 5.3

--- a/res/css/short-pixel.css
+++ b/res/css/short-pixel.css
@@ -18,6 +18,7 @@
 .sp-dropbtn.button {
     padding: 1px 24px 20px 5px;
     font-size: 20px;
+    line-height: 28px;
     /*background-color: #4CAF50;
     color: white;
     border: none;*/
