Dev10 - Fix for S3 offload - Fix for S3-offload w/ Crop plugin - Original files now optimized and backupped. - Custom media - Counts fixed - Fixed - issue with plugin activate

--- a/res/css/short-pixel.css
+++ b/res/css/short-pixel.css
@@ -355,7 +355,7 @@ div.shortpixel-rate-us > a:focus {
     padding:0px 5px;
     margin-bottom: 4px;
     height:20px;
-    line-height:16px;
+  /*  line-height:16px; */
     float:right;
 }
 
