--- a/res/css/shortpixel-notices.css
+++ b/res/css/shortpixel-notices.css
@@ -1,10 +1,11 @@
 .shortpixel.notice {
-  min-height: 50px;
-  padding: 8px; }
+  min-height: 75px;
+  padding: 8px;
+  display: flex;
+  align-items: center; }
   .shortpixel.notice .notice-dismiss {
     margin-top: 10px; }
   .shortpixel.notice span {
-    display: inline-block;
     vertical-align: middle; }
     .shortpixel.notice span.icon {
       margin: 0 25px 0 0; }
