--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -2,6 +2,7 @@
 @import 'view/bulk-restore-all';
 @import 'view/bulk_dashboard';
 @import 'view/settings-advanced';
+@import 'view/settings-cloudflare';
 @import 'view/settings';
 @import 'view/edit-media';
 @import 'view/debug';
