Fixes for custom folder / nggallery - Removed shortpixel-nextgen-adapter in favor of external/nextgen - Fixed database definition for cmyk2rgb ( default 0 ) - Fixed bug, cmyk2rgb not set when batch inserting images, resulting in wrong assertion on display page - Fixed issue Nggallery integration not working / firing

--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -36,6 +36,9 @@
     max-width: 70%; }
   #shortpixel-settings-tabs #tab-adv-settings .addCustomFolder input[name="saveAdv"] {
     margin-left: 8px; }
+#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list th {
+  width: auto;
+  padding: 12px 16px 12px 12px; }
 
 .cf_switch label {
   width: 100%;
