--- a/res/scss/view/_settings-advanced.scss
+++ b/res/scss/view/_settings-advanced.scss
@@ -21,6 +21,16 @@
     }
   }
 
+  // additional media table
+  .shortpixel-folders-list
+  {
+      th {
+        width: auto;
+        padding: 12px 16px 12px 12px;
+
+      }
+  }
+
 
 
 }
