--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -36,9 +36,25 @@
     max-width: 70%; }
   #shortpixel-settings-tabs #tab-adv-settings .addCustomFolder input[name="saveAdv"] {
     margin-left: 8px; }
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list th {
-  width: auto;
-  padding: 12px 16px 12px 12px; }
+#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list {
+  display: table;
+  border-collapse: separate; }
+  #shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div.heading {
+    width: auto;
+    display: table-header-group;
+    padding: 12px 16px 12px 12px; }
+    #shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div.heading span {
+      font-weight: 600;
+      font-size: 14px; }
+  #shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div {
+    background-color: #eee;
+    display: table-row; }
+    #shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div > span {
+      display: table-cell;
+      padding: 5px 10px;
+      vertical-align: middle; }
+  #shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list .refresh-folder {
+    text-decoration: none; }
 
 .cf_switch label {
   width: 100%;
