--- a/res/scss/shortpixel-othermedia.scss
+++ b/res/scss/shortpixel-othermedia.scss
@@ -123,6 +123,10 @@
            color: #fff;
            text-decoration: none;
          }
+         .sp-column-info {
+           width: 400px;
+           display: inline-block;
+         }
       }
       .no-items
       {
