--- a/res/css/shortpixel-notices.css
+++ b/res/css/shortpixel-notices.css
@@ -18,7 +18,7 @@
     display: table-row; }
   .shortpixel.notice .sp-conflict-plugins li > * {
     display: table-cell; }
-.shortpixel.notice button {
+.shortpixel.notice .content button {
   background-color: #007cba; }
 .shortpixel.notice li.sp-conflict-plugins-list {
   line-height: 28px;
