--- a/res/scss/view/_settings-advanced.scss
+++ b/res/scss/view/_settings-advanced.scss
@@ -24,11 +24,38 @@
   // additional media table
   .shortpixel-folders-list
   {
-      th {
+      display: table;
+      border-collapse: separate;
+
+      div.heading
+       {
         width: auto;
+        display: table-header-group;
         padding: 12px 16px 12px 12px;
+        span
+        {
+          font-weight: 600;
+          font-size: 14px;
+        }
+      }
+      div
+      {
+
+        display: table-row;
+        &> span
+        {
+          display: table-cell;
+          padding: 5px 10px;
+          vertical-align: middle;
+          background-color: #eee;
+          &.action { background-color: unset; }
+        }
 
       }
+
+
+      .refresh-folder { text-decoration: none; }
+      .info-icon { cursor: pointer; }
   }
 
 
