--- a/res/css/short-pixel.css
+++ b/res/css/short-pixel.css
@@ -16,9 +16,10 @@
 
 /* Dropdown Button */
 .sp-dropbtn.button {
-    padding: 1px 24px 20px 5px;
+    box-sizing: content-box;
+    padding: 0 5px;
     font-size: 20px;
-    line-height: 28px;
+    line-height: 20px;
     /*background-color: #4CAF50;
     color: white;
     border: none;*/
@@ -46,6 +47,10 @@
     min-width: 190px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+}
+.rtl .sp-dropdown-content {
+    right:auto;
+    left: 0;
 }
 
 /* Links inside the dropdown */
@@ -352,6 +357,10 @@ div.shortpixel-rate-us > a:focus {
     min-height:30px;
 
     float:right;
+}
+.wp-core-ui.rtl .column-wp-shortPixel .sp-column-actions,
+.wp-core-ui.rtl .column-wp-shortPixel .button.button-smaller{
+    float:left;
 }
 
 th.sortable.column-wp-shortPixel a,
