--- a/res/scss/shortpixel-othermedia.scss
+++ b/res/scss/shortpixel-othermedia.scss
@@ -136,13 +136,39 @@
          {
            min-width: 105px;
          }
-         .single-action.button-primary a
+         .single-action
          {
-           color: #fff;
-           text-decoration: none;
+           text-align: center;
+           .button-primary a
+           {
+             color: #fff;
+             text-decoration: none;
+           }
+           .button-smaller
+           {
+             width: 110px;
+           }
+         }
+
+         .multi-action-wrapper
+         {
+           display: flex;
+           flex-direction: column;
+           .single-action
+           {
+             display: inline-block;
+             margin: 8px 0;
+             a
+             {
+               display: block;
+
+             }
+           }
+
          }
          .sp-column-info {
-           width: 400px;
+           max-width: 400px;
+           min-width: 250px;
            display: inline-block;
            @media(max-width: 1550px) {
                width: auto;
