--- a/res/scss/shortpixel-othermedia.scss
+++ b/res/scss/shortpixel-othermedia.scss
@@ -124,6 +124,8 @@
            min-height: 60px;
            display: inline-block;
            border: 1px solid #ccc;
+           background-size: cover;
+           background-position: center;
 
            img {
              max-width: 60px;
