--- a/res/css/short-pixel.css
+++ b/res/css/short-pixel.css
@@ -3,6 +3,8 @@
     font-style: normal;
 }
 
+.shortpixel-hide { display: none; }
+
 .clearfix:before, .clearfix:after { content: " "; /* 1 */ display: table; /* 2 */}
 .clearfix:after { clear: both; }
 .clearfix { zoom: 1; }
