--- a/res/css/short-pixel-bar.css
+++ b/res/css/short-pixel-bar.css
@@ -1,6 +1,11 @@
 /**
 CSS for features that are displayed on all Admin page, like the bar status icon and some alerts.
  */
+.shortpixel-hide
+{
+   display: none;
+}
+
 li.shortpixel-toolbar-processing > a.ab-item > div,
 #wpadminbar li.shortpixel-toolbar-processing > a.ab-item > div{
     /*    background-image: url("../img/loading-dark-big.gif");
@@ -84,7 +89,7 @@ li.shortpixel-toolbar-processing.shortpixel-alert > a.ab-item > div,
 
 
 .sp-quota-exceeded-alert {
-    
+
 }
 .shortpixel-clearfix {
     width:100%;
