--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -1,21 +1,61 @@
+.shortpixel-bulk-wrapper h1 {
+  font-size: 23px;
+  font-weight: 400px; }
+.shortpixel-bulk-wrapper h3.heading {
+  margin: 15px 0 15px 0px;
+  padding-left: 10px;
+  font-size: 19px;
+  font-weight: 400;
+  line-height: 42px;
+  border-bottom: 1px solid #ccc;
+  position: relative; }
+  .shortpixel-bulk-wrapper h3.heading span {
+    vertical-align: top;
+    margin-right: 20px; }
+.shortpixel-bulk-wrapper p.description {
+  font-size: 14px;
+  max-width: 650px;
+  margin-left: 10px;
+  margin: 15px 0; }
 .shortpixel-bulk-wrapper .panel {
   background: #fff;
-  border: 1px solid #ff0000;
-  width: 950px;
+  width: 90%;
   min-height: 600px;
   /* (for debuggings)
     position: absolute; */
-  margin: 40px;
   z-index: 1;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 1s linear; }
+  transition: opacity 1s linear;
+  box-shadow: 2px 2px 10px #ccc;
+  margin: 15px 0; }
+  .shortpixel-bulk-wrapper .panel p {
+    margin-left: 15px; }
   .shortpixel-bulk-wrapper .panel.active {
     visibility: visible;
     opacity: 1; }
   .shortpixel-bulk-wrapper .panel .panel-container {
     z-index: 5;
-    padding: 10%; }
+    display: inline-block;
+    width: 100%; }
+.shortpixel-bulk-wrapper section.panel.dashboard h3.heading {
+  border: 0; }
+.shortpixel-bulk-wrapper section.panel.dashboard .bulk-wrapper {
+  background-color: #116C7D;
+  text-align: center;
+  height: 150px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .shortpixel-bulk-wrapper section.panel.dashboard .bulk-wrapper button {
+    color: #ffffff;
+    background: linear-gradient(90deg, #1FBEC9 0%, #1FB5BF 100%);
+    border-radius: 3px;
+    width: 200px;
+    height: 45px;
+    font-size: 13px;
+    line-height: 21px; }
+    .shortpixel-bulk-wrapper section.panel.dashboard .bulk-wrapper button span {
+      vertical-align: middle; }
 .shortpixel-bulk-wrapper section.progressbar {
   margin: 30px 0; }
   .shortpixel-bulk-wrapper section.progressbar .flex {
@@ -67,10 +107,52 @@
   color: #EC2C25; }
 .shortpixel-bulk-wrapper section.panel.selection .progressbar .select .step {
   border-color: #1FBEC9; }
+.shortpixel-bulk-wrapper section.panel.selection .load.wrapper, .shortpixel-bulk-wrapper section.panel.selection .interface.wrapper {
+  opacity: 0;
+  transition: all 1s ease-in; }
+.shortpixel-bulk-wrapper section.panel.selection[data-status="loading"] .load.wrapper {
+  opacity: 1; }
+.shortpixel-bulk-wrapper section.panel.selection[data-status="loaded"] .interface.wrapper {
+  opacity: 1; }
+.shortpixel-bulk-wrapper section.panel.selection .load.wrapper .loading {
+  display: flex;
+  color: #ccc;
+  font-weight: 700;
+  align-items: center;
+  width: 90%;
+  margin: auto; }
+  .shortpixel-bulk-wrapper section.panel.selection .load.wrapper .loading span:first-child {
+    margin-right: 20px; }
+  .shortpixel-bulk-wrapper section.panel.selection .load.wrapper .loading img {
+    animation: cssload-spin 5000ms infinite linear;
+    -o-animation: cssload-spin 5000ms infinite linear;
+    -ms-animation: cssload-spin 5000ms infinite linear;
+    -webkit-animation: cssload-spin 5000ms infinite linear;
+    -moz-animation: cssload-spin 5000ms infinite linear; }
+@keyframes loading-spin {
+  100% {
+    transform: rotate(360deg);
+    transform: rotate(360deg); } }
+@-o-keyframes loading-spin {
+  100% {
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+@-ms-keyframes loading-spin {
+  100% {
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+@-webkit-keyframes loading-spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+@-moz-keyframes loading-spin {
+  100% {
+    -moz-transform: rotate(360deg);
+    transform: rotate(360deg); } }
 .shortpixel-bulk-wrapper section.panel.summary .progressbar .select .line {
   background: #1FBEC9; }
 .shortpixel-bulk-wrapper section.panel.summary .progressbar .select .text, .shortpixel-bulk-wrapper section.panel.summary .progressbar .select .step {
-  color: #EC2C25; }
+  color: #ccc; }
 .shortpixel-bulk-wrapper section.panel.summary .progressbar .select .step {
   border-color: #1FBEC9; }
 .shortpixel-bulk-wrapper section.panel.summary .progressbar .summary .line {
@@ -79,10 +161,104 @@
   color: #EC2C25; }
 .shortpixel-bulk-wrapper section.panel.summary .progressbar .summary .step {
   border-color: #1FBEC9; }
+.shortpixel-bulk-wrapper section.panel.summary .summary-list {
+  background-color: #F6F9FF;
+  width: 80%;
+  margin: 0 auto; }
+  .shortpixel-bulk-wrapper section.panel.summary .summary-list h3 {
+    font-size: 18px;
+    font-weight: 400;
+    padding: 26px 0;
+    color: #555D66;
+    padding-left: 35px;
+    border-bottom: 1px solid #DFEAFF; }
+    .shortpixel-bulk-wrapper section.panel.summary .summary-list h3 span {
+      float: right;
+      margin-right: 35px;
+      margin-top: -15px; }
+  .shortpixel-bulk-wrapper section.panel.summary .summary-list .section-wrapper h4 {
+    font-size: 14px;
+    font-weight: 700;
+    padding-left: 80px; }
+    .shortpixel-bulk-wrapper section.panel.summary .summary-list .section-wrapper h4 .dashicons {
+      color: #1FBEC9;
+      margin-right: 10px; }
+  .shortpixel-bulk-wrapper section.panel.summary .summary-list .section-wrapper .list-table {
+    display: table;
+    width: 90%;
+    margin: 0 auto; }
+    .shortpixel-bulk-wrapper section.panel.summary .summary-list .section-wrapper .list-table > div {
+      display: table-row;
+      background-color: #F0F5FF; }
+    .shortpixel-bulk-wrapper section.panel.summary .summary-list .section-wrapper .list-table > div > span {
+      display: table-cell;
+      border: 1px solid #DFEAFF;
+      width: 50%;
+      text-align: center;
+      padding: 15px 0; }
+.shortpixel-bulk-wrapper section.panel.summary .totals {
+  text-align: center;
+  font-size: 25px;
+  padding: 35px 0;
+  background: #F6F9FF; }
+  .shortpixel-bulk-wrapper section.panel.summary .totals .number {
+    margin-left: 35px; }
+.shortpixel-bulk-wrapper section.panel.summary .credits {
+  display: table;
+  margin: 35px 0 35px 25px;
+  width: 50%; }
+  .shortpixel-bulk-wrapper section.panel.summary .credits > p {
+    display: table-row; }
+  .shortpixel-bulk-wrapper section.panel.summary .credits > p > span {
+    display: table-cell;
+    padding: 10px 0;
+    font-size: 14px; }
+    .shortpixel-bulk-wrapper section.panel.summary .credits > p > span:first-child {
+      font-weight: 700; }
+  .shortpixel-bulk-wrapper section.panel.summary .credits .heading span {
+    font-size: 18px;
+    font-weight: 700; }
+.shortpixel-bulk-wrapper section.panel.summary .over-quota {
+  border: 1px solid #ff0000;
+  padding: 8px;
+  width: 80%;
+  margin: 30px auto;
+  display: flex;
+  align-items: center; }
+  .shortpixel-bulk-wrapper section.panel.summary .over-quota > span {
+    margin-right: 20px; }
+  .shortpixel-bulk-wrapper section.panel.summary .over-quota p {
+    max-width: 550px;
+    font-size: 14px;
+    line-height: 21px; }
+    .shortpixel-bulk-wrapper section.panel.summary .over-quota p .red {
+      color: #ff0000; }
+  .shortpixel-bulk-wrapper section.panel.summary .over-quota button {
+    background: #F5F5F5;
+    color: #1FBEC9;
+    border: 1px solid #1FBEC9;
+    border-radius: 3px;
+    box-shadow: 0px 1px 1px rgba(171, 170, 170, 0.3);
+    margin: 16px 0; }
+.shortpixel-bulk-wrapper section.panel.summary nav {
+  margin: 45px auto;
+  width: 80%; }
+  .shortpixel-bulk-wrapper section.panel.summary nav .button {
+    background: #F5F5F5;
+    color: #1FBEC9;
+    padding: 4px 16px; }
+  .shortpixel-bulk-wrapper section.panel.summary nav .button-primary {
+    padding: 4px 16px;
+    margin-left: 15px;
+    background: #1FBEC9;
+    color: #fff;
+    border: 1px solid #1FBEC9;
+    border-radius: 3px;
+    box-shadow: 0px 1px 1px rgba(171, 170, 170, 0.3); }
 .shortpixel-bulk-wrapper section.panel.process .progressbar .select .line, .shortpixel-bulk-wrapper section.panel.process .progressbar .summary .line {
   background: #1FBEC9; }
 .shortpixel-bulk-wrapper section.panel.process .progressbar .select .text, .shortpixel-bulk-wrapper section.panel.process .progressbar .select .step, .shortpixel-bulk-wrapper section.panel.process .progressbar .summary .text, .shortpixel-bulk-wrapper section.panel.process .progressbar .summary .step {
-  color: #EC2C25; }
+  color: #ccc; }
 .shortpixel-bulk-wrapper section.panel.process .progressbar .select .step, .shortpixel-bulk-wrapper section.panel.process .progressbar .summary .step {
   border-color: #1FBEC9; }
 .shortpixel-bulk-wrapper section.panel.process .progressbar .process .line {
@@ -91,9 +267,122 @@
   color: #EC2C25; }
 .shortpixel-bulk-wrapper section.panel.process .progressbar .process .step {
   border-color: #1FBEC9; }
+.shortpixel-bulk-wrapper section.panel.process .average-optimization {
+  position: absolute;
+  top: 0;
+  right: 35px;
+  display: flex;
+  justify-content: center;
+  margin-top: -10px; }
+  .shortpixel-bulk-wrapper section.panel.process .average-optimization p {
+    margin-top: 25px;
+    margin-right: 15px;
+    font-size: 14px; }
+  .shortpixel-bulk-wrapper section.panel.process .average-optimization .opt-circle {
+    width: 90px;
+    height: 90px;
+    float: right;
+    margin-right: 35px; }
+    .shortpixel-bulk-wrapper section.panel.process .average-optimization .opt-circle .trail {
+      stroke: #ddd; }
+    .shortpixel-bulk-wrapper section.panel.process .average-optimization .opt-circle .path {
+      stroke: #1FBEC9;
+      stroke-linecap: round;
+      transition: stroke-dashoffset 0.5s ease 0s; }
+    .shortpixel-bulk-wrapper section.panel.process .average-optimization .opt-circle .text {
+      fill: #1FBEC9;
+      font-size: 28px;
+      font-weight: 700;
+      dominant-baseline: middle;
+      text-anchor: middle; }
+.shortpixel-bulk-wrapper section.panel.process .bulk-summary {
+  display: table;
+  width: 80%;
+  margin: 30px auto; }
+  .shortpixel-bulk-wrapper section.panel.process .bulk-summary > div {
+    display: table-row; }
+  .shortpixel-bulk-wrapper section.panel.process .bulk-summary > div > span {
+    display: table-cell;
+    padding: 16px; }
+  .shortpixel-bulk-wrapper section.panel.process .bulk-summary .heading {
+    background: #F6F9FF;
+    border: 1px solid #EBF5FF; }
+  .shortpixel-bulk-wrapper section.panel.process .bulk-summary .progressbar {
+    width: 100px;
+    height: 10px;
+    position: relative;
+    background: #ccc;
+    display: inline-block; }
+    .shortpixel-bulk-wrapper section.panel.process .bulk-summary .progressbar .done {
+      position: absolute;
+      z-index: 2;
+      left: 0;
+      width: 10%;
+      top: 0;
+      bottom: 0;
+      background: #1FBEC9; }
+.shortpixel-bulk-wrapper section.panel.process .image-preview {
+  background: #F6F9FF;
+  border: 1px solid #DFEAFF;
+  width: 80%;
+  margin: 15px auto; }
+  .shortpixel-bulk-wrapper section.panel.process .image-preview .preview-wrapper {
+    display: flex;
+    width: 60%;
+    justify-content: center; }
+    .shortpixel-bulk-wrapper section.panel.process .image-preview .preview-wrapper .image-source, .shortpixel-bulk-wrapper section.panel.process .image-preview .preview-wrapper .image-result {
+      min-width: 160px;
+      min-height: 180px;
+      border: 1px solid #DFEAFF; }
+.shortpixel-bulk-wrapper section.panel.process nav {
+  width: 80%;
+  margin: 35px auto; }
 .shortpixel-bulk-wrapper .part-debug {
   background: #000;
   color: #fff;
   width: 100%;
   min-height: 150px;
   max-height: 550px; }
+.shortpixel-bulk-wrapper .switch_button {
+  margin-left: -5px; }
+  .shortpixel-bulk-wrapper .switch_button label {
+    padding: 8px 5px; }
+    .shortpixel-bulk-wrapper .switch_button label:focus {
+      outline: none; }
+  .shortpixel-bulk-wrapper .switch_button input {
+    display: none; }
+    .shortpixel-bulk-wrapper .switch_button input:checked ~ .the_switch {
+      background: #6fbeb5; }
+    .shortpixel-bulk-wrapper .switch_button input:checked ~ .the_switch:after {
+      left: 26px;
+      background: #179588; }
+    .shortpixel-bulk-wrapper .switch_button input::disabled ~ .the_switch {
+      background: #d5d5d5;
+      pointer-events: none; }
+    .shortpixel-bulk-wrapper .switch_button input:disabled ~ .the_switch:after {
+      background: #bcbdbc; }
+  .shortpixel-bulk-wrapper .switch_button .the_switch {
+    position: relative;
+    display: inline-block;
+    height: 15px;
+    width: 50px;
+    background: #898989;
+    border-radius: 100px;
+    cursor: pointer;
+    transition: all 0.3s ease; }
+    .shortpixel-bulk-wrapper .switch_button .the_switch:after {
+      position: absolute;
+      left: -2px;
+      top: -3px;
+      display: block;
+      width: 24px;
+      height: 24px;
+      border-radius: 100px;
+      background: #aaa;
+      box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
+      content: '';
+      transition: all 0.2s ease; }
+    .shortpixel-bulk-wrapper .switch_button .the_switch:active:after {
+      transform: scale(0.9, 0.85); }
+    .shortpixel-bulk-wrapper .switch_button .the_switch:focus {
+      outline: none; }
