--- a/res/scss/shortpixel-toolbar.css
+++ b/res/scss/shortpixel-toolbar.css
@@ -11,40 +11,18 @@ CSS for features that are displayed on all Admin page, like the bar status icon 
         background-repeat: no-repeat;
     */
     height: 33px;
-    width: 33px;
-    padding: 0;
     margin-top: -1px;
     padding: 0 3px; }
     #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div img {
       margin-right: 2px;
       margin-top: 6px;
-      vertical-align: top;
-      opacity: 1;
-      transition: all 1s linear;
-      position: absolute;
-      top: 0; }
+      vertical-align: top; }
     #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div span.shp-alert {
       display: none; }
     #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div .controls {
-      position: absolute;
-      top: 0;
-      height: 32px;
-      background: rgba(35, 40, 45, 0.5);
-      box-sizing: border-box;
-      transition: all 1s linear;
-      opacity: 0;
-      visibility: hidden;
-      z-index: 0;
-      overflow: hidden; }
+      position: absolute; }
       #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div .controls .play, #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div .controls .pause {
-        font-family: dashicons;
-        font-size: 32px;
-        color: #fff;
-        display: inline-block;
-        width: 100%;
-        line-height: 1; }
-        #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div .controls .play.hidden, #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div .controls .pause.hidden {
-          display: none; }
+        color: #fff; }
     #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div .cssload-container {
       width: 100%;
       height: 24px;
@@ -85,19 +63,6 @@ CSS for features that are displayed on all Admin page, like the bar status icon 
   100% {
     -moz-transform: rotate(360deg);
     transform: rotate(360deg); } }
-    #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div:hover img:hover, #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div:hover .stats {
-      opacity: 0;
-      visibility: hidden; }
-    #wpadminbar li.shortpixel-toolbar-processing a.ab-item > div:hover .controls {
-      visibility: visible;
-      opacity: 1;
-      z-index: 100; }
-  #wpadminbar li.shortpixel-toolbar-processing.shortpixel-paused .ab-item > div .cssload-speeding-wheel {
-    animation: none; }
-  #wpadminbar li.shortpixel-toolbar-processing.shortpixel-paused .ab-item > div .controls {
-    visibility: visible;
-    opacity: 1;
-    z-index: 100; }
   #wpadminbar li.shortpixel-toolbar-processing.shortpixel-alert span.shp-alert {
     display: inline;
     font-size: 26px;
