--- a/res/scss/shortpixel-toolbar.scss
+++ b/res/scss/shortpixel-toolbar.scss
@@ -15,16 +15,50 @@ CSS for features that are displayed on all Admin page, like the bar status icon 
            background-repeat: no-repeat;
        */
        height: 33px;
+       width: 33px;
+       padding: 0;
        margin-top: -1px;
        padding: 0 3px;
        img {
          margin-right: 2px;
          margin-top: 6px;
          vertical-align: top;
+         opacity: 1;
+         transition: all 1s linear;
+         position: absolute;
+         top: 0;
+
        }
        span.shp-alert {
          display:none;
        }
+       .controls
+       {
+           position: absolute;
+           top: 0;
+           height: 32px;
+           background: rgba(35,40,45,0.5);
+           box-sizing: border-box;
+           transition: all 1s linear;
+           opacity: 0;
+           visibility: hidden;
+           z-index: 0;
+           overflow: hidden;
+
+            .play, .pause
+            {
+                font-family: dashicons;
+                font-size: 32px;
+                color: #fff;
+                display: inline-block;
+                width: 100%;
+                line-height: 1;
+                &.hidden {
+                  display: none;
+                }
+            }
+
+        }
        .cssload-container {
            width: 100%;
            height: 24px;
@@ -68,6 +102,37 @@ CSS for features that are displayed on all Admin page, like the bar status icon 
        	100%{ -moz-transform: rotate(360deg); transform: rotate(360deg); }
        }
 
+       &:hover
+       {
+         img:hover, .stats
+         {
+            opacity: 0;
+            visibility: hidden;
+         }
+         .controls
+         {
+            visibility: visible;
+            opacity: 1;
+            z-index: 100;
+
+         }
+
+
+       }
+
+   } // ab-item > div
+   &.shortpixel-paused .ab-item > div
+   {
+       .cssload-speeding-wheel
+       {
+         animation: none;
+       }
+       .controls
+       {
+         visibility: visible;
+         opacity: 1;
+         z-index: 100;
+       }
    }
    &.shortpixel-alert // alert active.
    {
